<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wipro.topgear.com.activitylifecycle.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic" />
    <View
        android:layout_width="fill_parent"
        android:background="#000000"
        android:layout_height="5dp"
        android:id="@+id/view2"
        android:layout_below="@+id/header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:text="navigate to second activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="68dp"
        android:id="@+id/navigate" />

    <TextView
        android:text="@string/Second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        android:id="@+id/textView4" />

    <TextView
        android:text="@string/Third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:id="@+id/textView5" />
    <View
        android:layout_width="fill_parent"
        android:background="#000000"
        android:layout_height="5dp"
        android:id="@+id/view"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:text="@string/Sixth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/Seventh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:id="@+id/textView7" />

    <View
        android:layout_width="fill_parent"
        android:background="#000000"
        android:layout_height="5dp"
        android:id="@+id/view1"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:text="@string/Eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:id="@+id/textView8" />

    <TextView
        android:text="@string/Nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:id="@+id/textView9" />
    <View
        android:layout_width="fill_parent"
        android:background="#000000"
        android:layout_height="5dp"
        android:id="@+id/view3"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />
    <TextView
        android:text="@string/Fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:id="@+id/textView10" />

    <TextView
        android:text="@string/Fifth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textSize="15sp"
        android:id="@+id/textView11" />

    <!--<Button
        android:text="HOME screen of phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigate"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="21dp"
        android:id="@+id/home" />-->
</RelativeLayout>
